--- a/aim.html
+++ b/aim.html
@@ -9,7 +9,7 @@
 <div class="main-header">
   <text class="name">NASTYYNAJ<3</text> <br>
     <img class="selfie" src="casestudystarters/IMG_6759.jpg">
-  <div class="text-n-shit">
+  <div class="textonline">
       "Your weekly dose of Throwback every Thursday at 8PM on 105.1 KRFH." <br><br>
       Female <br>
       24 Years Old <br>
