--- a/playlists.html
+++ b/playlists.html
@@ -62,28 +62,28 @@
      <div class="column">
         <div class="tabbed">
           <div id="luvrz" class="tabcontent">
-            <div class="playlistshit"> 
+            <div class="playlists"> 
               <center>
                 <iframe src="https://open.spotify.com/embed/playlist/5xdxi7F2Ow8KR77O656zxE" width="90%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </center>
             </div>
           </div>
           <div id="punk" class="tabcontent hide">
-            <div class="playlistshit"> 
+            <div class="playlists"> 
               <center>
                 <iframe src="https://open.spotify.com/embed/playlist/5NTLy1XW7QiKtn6u9OKFxw" width="90%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </center>
             </div>
           </div>
           <div id="altern" class="tabcontent hide">
-            <div class="playlistshit"> 
+            <div class="playlists"> 
               <center>
                 <iframe src="https://open.spotify.com/embed/playlist/7dDmTrgXnczMAAC6zgX4L8" width="90%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </center>
             </div>
           </div>
           <div id="2013" class="tabcontent hide">
-            <div class="playlistshit"> 
+            <div class="playlists"> 
               <center>
                 <iframe src="https://open.spotify.com/embed/playlist/1TRqms8rzaEuwhr8dBO7uR" width="90%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
               </center>
