--- a/dates.html
+++ b/dates.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="javajam.css">
+  <link rel="stylesheet" href="index.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
 
-</head>   
+</head>
+<div>
 <div class="main-header">
-  <text class="name">NASTYYNAJ<3</text> <br>
+  <text class="name">DJ NAJ<3</text> <br>
   <img class="selfie" src="casestudystarters/IMG_6759.jpg">
   <div class="textonline">
       "Your weekly dose of Throwback every Thursday at 8PM on 105.1 KRFH." <br><br>
       Female <br>
-      24 Years Old <br>
+      25 Years Old <br>
       Arcata, CA <br>
       <img class="online" src="casestudystarters/162.gif">
   </div>
+</div>
 <div class="contact">
   <div class="left">
     <a href="playlists.html">PLAYLISTS</a> <br><br>
     <a href="aim.html">AIM ME </a> &nbsp;
 </div>
-<div class="right">      
+<div class="right">
     <a href="dates.html">DATES</a> <br><br>
   <a href="http://www.krfh.net"> KRFH </a>
  </div>
@@ -37,3 +39,4 @@
 </main>
 </div>
 </body></html>
+
