--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="javajam.css">
+  <link rel="stylesheet" href="index.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
 
-</head>   
+</head>
+<div>
 <div class="main-header">
-  <text class="name">NASTYYNAJ<3</text> <br>
+  <text class="name">DJ NAJ<3</text> <br>
   <img class="selfie" src="casestudystarters/IMG_6759.jpg">
   <div class="textonline">
       "Your weekly dose of Throwback every Thursday at 8PM on 105.1 KRFH." <br><br>
       Female <br>
-      24 Years Old <br>
+      25 Years Old <br>
       Arcata, CA <br>
       <img class="online" src="casestudystarters/162.gif">
   </div>
+</div>
 <div class="contact">
   <div class="left">
     <a href="playlists.html">PLAYLISTS</a> <br><br>
     <a href="aim.html">AIM ME </a> &nbsp;
 </div>
-<div class="right">      
+<div class="right">
   <a href="dates.html">DATES</a> <br><br>
   <a href="http://www.krfh.net"> KRFH </a>
  </div>
@@ -34,9 +36,9 @@
 <main>
 <div class="main-body">
   <text style=" text-align:left; font-family: VT323;">
-    ABOUT ME: 
+    ABOUT ME:
   <br> A radio DJ from L.A. bringing you throwback anthems on KRFH. Love the 70s, 00s or 10s, I'll be bringing all of it! <br>
-  Due to COVID-19, we are unable to bring you live shows on KRFH. However, find my curated playlists on the playlist tab! 
+  Due to COVID-19, we are unable to bring you live shows on KRFH. However, find my curated playlists on the playlist tab!
   </text>
   <img style="width: 60%; margin-top: 3%;" src="http://images.jellymuffin.com/images/welcome/images/001.gif" border=0></a></h2> <br>
 </main>
