--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <!--#include file="index.html" -->
 <html lang="en"><head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="javajam.css">
+  <link rel="stylesheet" href="index.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
 </head>
