--- a/playlists.html
+++ b/playlists.html
@@ -24,7 +24,7 @@
 <body>
    
   <div class="main-header">
-    <text class="name">NASTYYNAJ<3</text> <br>
+    <text class="name">DJ NAJ<3</text> <br>
     <img class="selfie" src="casestudystarters/IMG_6759.jpg">
     <div class="textonline">
         "Your weekly dose of Throwback every Thursday at 8PM on 105.1 KRFH." <br><br>
