--- a/index.html
+++ b/index.html
@@ -5,3 +5,11 @@ They are collected through household surveys and Multiple Indicator Cluster Surv
 
 This data set can be used to identify possible areas areas that can use additional resources
 or programs for development.
+
+
+<h1> Book </h1>
+<h3> Interactive Data Visualization for the Web: An Introduction to Designing </h3>
+<img src="book.jpg" width="200" height="320">
+I chose <a href="https://www.amazon.com/Interactive-Data-Visualization-Web-Introduction/dp/1449339735">Interactive Data Visualization for the Web:
+An Introduction to Designing </a> by Scott Murray. This book is an introduction to data visualization, teaching you the basics of D3 which is a Javascript library.
+Given I have experience in HTML and Javascript, it seems very interesting to pick up.
