--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<h1> Data Sets </h1>
+<center> <h1> Data Sets </h1>
+<p>
 I chose UNICEF's <a href="https://data.unicef.org/topic/early-childhood-development/overview/">data set</a>. Specifically, the Early childhood devlopment overview.
 This takes three areas of measurement: home environment, childhood care and education, and developmental status.
 They are collected through household surveys and Multiple Indicator Cluster Surveys.
-
 This data set can be used to identify possible areas areas that can use additional resources
 or programs for development.
-
+</p>
 
 <h1> Book </h1>
 <h3> Interactive Data Visualization for the Web: An Introduction to Designing </h3>
 <img src="book.jpg" width="200" height="320">
+<p>
 I chose <a href="https://www.amazon.com/Interactive-Data-Visualization-Web-Introduction/dp/1449339735">Interactive Data Visualization for the Web:
 An Introduction to Designing </a> by Scott Murray. This book is an introduction to data visualization, teaching you the basics of D3 which is a Javascript library.
 Given I have experience in HTML and Javascript, it seems very interesting to pick up.
+</p>
+</center>
